fix: replace header emojis with accessible images

--- a/tools/age-calculator/index.html
+++ b/tools/age-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎂</span> Age Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/age-calculator-cake.png" alt="" class="emoji" width="24" height="24" role="presentation"> Age Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Age Calculator provides a simple way to determine exactly how old you are today. This <strong>online age tool</strong> helps you figure out the number of years since your birth without doing the math yourself. Simply select your birthdate in the field below and your age appears instantly. The calculator uses standard date functions for accurate results. Once the page has loaded, it will also work offline thanks to cached assets. Whether you're curious about your next birthday or filling out paperwork, this tool is ready anytime. Try the Age Calculator now!</p>
 <div>
