--- a/tools/bmr-calculator/index.html
+++ b/tools/bmr-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🔥</span> BMR Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/bmr-calculator-fire.png" alt="" class="emoji" width="24" height="24" role="presentation"> BMR Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>BMR Calculator shows how many calories your body burns at rest. This <strong>online BMR tool</strong> uses the Mifflin-St Jeor equation, favored for its precision. Simply select your gender and enter your weight in kilograms, height in centimeters, and age in years. When you hit calculate, it reveals the calories you need just to maintain basic functions. Because the math runs locally in your browser, the tool still works even when you go offline. Knowing your BMR helps plan diets and track progress. Try the BMR Calculator now!</p>
 <div>
