--- a/tools/body-fat-calculator/index.html
+++ b/tools/body-fat-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💪</span> Body Fat Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/body-fat-calculator-bicep.png" alt="" class="emoji" width="24" height="24" role="presentation"> Body Fat Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Body Fat Calculator provides a quick way to estimate your body fat percentage without special equipment. This <strong>online body fat calculator</strong> uses the U.S. Navy method, which relies on simple body measurements like waist, neck, and height. By entering these numbers, you get an approximate percentage that can help you monitor your fitness progress. The interface works smoothly on phones, tablets and desktops, so you can check results anywhere. After the first visit, the calculator works offline thanks to cached assets. No personal data is saved or transmitted. Keep in mind that body fat formulas provide estimates and may vary based on individual factors, so consult a health professional for precise guidance. Try the Body Fat Calculator now!</p>
 <div>
