--- a/tools/car-loan-calculator/index.html
+++ b/tools/car-loan-calculator/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🏦</span> Car Loan Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/loan-bank.png" alt="" class="emoji" width="24" height="24" role="presentation"> Car Loan Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Car Loan Calculator helps you estimate affordable monthly payments when financing a vehicle. This <strong>online car loan tool</strong> factors in your vehicle price, down payment, interest rate and loan term. Enter the numbers and get instant results so you can shop with confidence. Because it runs entirely in your browser, you can use it offline anytime. Try the Car Loan Calculator now!</p>
 <label>Vehicle Price: <input type="number" id="loanAmount" aria-label="Vehicle price"></label>
