--- a/tools/circle-area-calculator/index.html
+++ b/tools/circle-area-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⭕</span> Circle Area Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/circle-area-calculator-circle.png" alt="" class="emoji" width="24" height="24" role="presentation"> Circle Area Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Circle Area Calculator makes it simple to determine how much space a round surface covers. This <strong>online circle area calculator</strong> lets you type in the radius or diameter and instantly see the computed area. Builders, students and hobbyists rely on this tool whenever they need a quick disk measurement. The straightforward interface keeps distractions away so you can focus on the numbers. It works smoothly on mobile devices and desktops, so you can check calculations anywhere. Because everything runs in your browser, it loads rapidly and functions without a connection after the first visit. Whether you're planning a circular patio, estimating paint coverage or solving geometry homework, this lightweight utility saves you time. Try the Circle Area Calculator now!</p>
 <div>
