--- a/tools/color-converter/index.html
+++ b/tools/color-converter/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎨</span> Color Converter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/palette.png" alt="" class="emoji" width="24" height="24" role="presentation"> Color Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Color Converter</strong> helps you quickly switch between HEX, RGB, and HSL color formats. Designers and developers often need different formats for various tools, and this <em>online color code converter</em> makes the process simple. Type a HEX value like <code>#ff5733</code> and instantly see the corresponding RGB and HSL values. Everything runs on the client side, so after the first visit you can keep using the tool offline. Adjusting your palette has never been easier. Try the Color Converter now!</p>
 <div>
