--- a/tools/color-picker/index.html
+++ b/tools/color-picker/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎨</span> Color Picker</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/palette.png" alt="" class="emoji" width="24" height="24" role="presentation"> Color Picker</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p><strong>Color Picker</strong> lets designers quickly choose any hue and instantly see its HEX, RGB and HSL codes. Use the slider or enter a value to refine your shade, then copy the color codes to your clipboard with one click. The entire tool works offline after the first visit so you can rely on it anywhere. Simple and fast, it&rsquo;s perfect for web projects, graphic design or presentations. Try the Color Picker now!</p>
 <div>
