--- a/tools/compound-interest-calculator/index.html
+++ b/tools/compound-interest-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💹</span> Compound Interest Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/compound-interest-chart.png" alt="" class="emoji" width="24" height="24" role="presentation"> Compound Interest Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Compound Interest Calculator reveals how money grows when interest is added to the principal periodically. This <strong>online compound interest calculator</strong> lets you input the starting amount, annual rate, number of compounding periods per year, and the total number of years. By hitting calculate, you see how <em>compound interest</em> accelerates your savings or debt. The script runs entirely on your device so the page remains usable offline once cached. Understanding how compounding works helps you plan long-term financial goals and compare investment options. Try the Compound Interest Calculator now!</p>
 <label>Principal: <input type="number" id="ciPrincipal" aria-label="Principal"></label>
