--- a/tools/countdown-timer/index.html
+++ b/tools/countdown-timer/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⏳</span> Countdown Timer</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/countdown-timer-hourglass.png" alt="" class="emoji" width="24" height="24" role="presentation"> Countdown Timer</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Countdown Timer helps you track short intervals with ease. This <strong>online timer</strong> runs entirely on your device so you can stay focused even if you lose connection. Set the minutes and seconds, press start and watch the display count down in real time. You can pause and resume whenever you need a break. When the time hits zero, the timer will alert you with a beep, keeping you on schedule for workouts, study sessions, or cooking. Try the Countdown Timer now!</p>
 <label>Minutes: <input type="number" id="cdMin" aria-label="Minutes" value="1"></label>
