--- a/tools/csv-to-json/index.html
+++ b/tools/csv-to-json/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📑</span> CSV to JSON Converter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/csv-to-json-bookmark.png" alt="" class="emoji" width="24" height="24" role="presentation"> CSV to JSON Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>CSV to JSON Converter</strong> turns your spreadsheet data into clean JSON for coding projects. Paste your comma-separated values and click convert to get structured output. This <em>online CSV converter</em> works offline after first load. Try the CSV to JSON Converter now!</p>
 <textarea id="csv-input" aria-label="CSV input" rows="6" cols="40"></textarea>
