--- a/tools/date-difference-calculator/index.html
+++ b/tools/date-difference-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📆</span> Date Difference Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/date-diff-calendar.png" alt="" class="emoji" width="24" height="24" role="presentation"> Date Difference Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Date Difference Calculator lets you discover the exact number of days separating any two dates. This <strong>online days counter</strong> works entirely in your browser, so it keeps running even if you lose your connection. Just pick a start date and an end date to instantly see how many days are in between. Whether you are planning an event, tracking a project timeline, or simply curious, this tool simplifies the math. All calculations happen locally, ensuring your date information remains private. Try the Date Difference Calculator now!</p>
 <div>
