--- a/tools/discount-calculator/index.html
+++ b/tools/discount-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🏷️</span> Discount Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/discount-label.png" alt="" class="emoji" width="24" height="24" role="presentation"> Discount Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Discount Calculator helps you figure out exactly how much money you will save before heading to the checkout. This <strong>discount calculator online</strong> takes your original price and the percentage off, then instantly reveals the final sale price and total savings. Whether you are shopping for clothes, gadgets, or groceries, knowing the <em>price after discount</em> ensures you stay on budget. The interface is minimal so it loads fast and works smoothly on phones or desktops. Calculations happen on your device, so you can double‑check deals even without a connection. From quick daily purchases to large items, the calculator supports any amount so you never miss a bargain. Because everything is computed locally, your data remains private while you shop with confidence. Give the Discount Calculator a try and see how much you can save!</p>
 <form id="discountForm" aria-label="Discount calculator form">
