--- a/tools/epoch-time-converter/index.html
+++ b/tools/epoch-time-converter/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⏱️</span> Epoch Time Converter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/stopwatch.png" alt="" class="emoji" width="24" height="24" role="presentation"> Epoch Time Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Epoch Time Converter lets you switch any calendar date to a Unix timestamp and vice versa. This <strong>online epoch converter</strong> handles the math for you so you don&rsquo;t need to remember formulas. Enter a human-readable date and click convert to instantly see the epoch seconds. Or paste a timestamp and get the local time. Everything runs in your browser, so once loaded the tool continues to work without a connection. The layout is clear on desktop and mobile, making it a handy <em>Unix time converter</em> for developers and curious users alike. Try the Epoch Time Converter now!</p>
 <div>
