--- a/tools/fraction-calculator/index.html
+++ b/tools/fraction-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">¼</span> Fraction Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/fraction-calculator-briefcase.png" alt="" class="emoji" width="24" height="24" role="presentation"> Fraction Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Fraction Calculator makes working with fractions straightforward. This <strong>online fraction calculator</strong> handles common tasks like adding, subtracting, multiplying, and dividing with ease. Simply enter two fractions, choose the operation, and see the result displayed in simplest form. Whether you need a quick <em>fraction solver</em> for homework problems or to adjust a recipe, this tool calculates everything in your browser. Since it runs entirely client-side, it continues to work offline once loaded. The clean design focuses on usability so you can concentrate on the math. Get accurate answers every time and master tricky fraction exercises. Try the Fraction Calculator now!</p>
 <form id="fracForm" aria-label="Fraction calculator form">
