--- a/tools/fuel-cost-calculator/index.html
+++ b/tools/fuel-cost-calculator/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⛽</span> Fuel Cost Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/fuel-cost-calculator-pump.png" alt="" class="emoji" width="24" height="24" role="presentation"> Fuel Cost Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Fuel Cost Calculator shows you how much you'll spend on fuel for a trip. Enter distance, fuel price, and miles-per-gallon to see the total cost instantly. It works offline after loading so you can plan on the go. Try the Fuel Cost Calculator now!</p>
 <div>
