--- a/tools/json-formatter/index.html
+++ b/tools/json-formatter/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">{}</span> JSON Formatter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/json-formatter-braces.png" alt="" class="emoji" width="24" height="24" role="presentation"> JSON Formatter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>JSON Formatter</strong> cleans up messy JSON so you can read it easily. Paste your data and click format to see proper indentation and syntax highlighting. This <em>online JSON formatter</em> works offline after first load. Try the JSON Formatter now!</p>
 <textarea id="json-input" aria-label="JSON input" rows="6" cols="40"></textarea>
