--- a/tools/markdown-editor/index.html
+++ b/tools/markdown-editor/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📝</span> Markdown Editor</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/markdown-editor-pencil.png" alt="" class="emoji" width="24" height="24" role="presentation"> Markdown Editor</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p><strong>Markdown Editor</strong> lets you write Markdown and instantly preview the HTML output. It&rsquo;s ideal for note taking, blogging or preparing documentation. The editor runs completely in your browser so your words never leave your device and the tool stays available offline. Type on the left, read the formatted result on the right and copy the final markup when you&rsquo;re done. Try the Markdown Editor now!</p>
 <div class="row">
