--- a/tools/paint-coverage-calculator/index.html
+++ b/tools/paint-coverage-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎨</span> Paint Coverage Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/palette.png" alt="" class="emoji" width="24" height="24" role="presentation"> Paint Coverage Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Paint Coverage Calculator</strong> estimates how many gallons of paint you need for walls and ceilings. This <em>online paint estimator</em> works great for DIY projects and professional jobs alike. Simply enter the total area to cover in square feet, the paint&rsquo;s coverage rate per gallon, and the number of coats. The result instantly shows how many gallons to buy so you avoid extra trips. Once loaded, the tool operates offline, making it handy on-site where Wi‑Fi might be spotty. Keep your renovation on budget and reduce waste. Try the Paint Coverage Calculator now!</p>
 <div>
