--- a/tools/percentage-calculator/index.html
+++ b/tools/percentage-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📊</span> Percentage Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/percentage-calculator-bars.png" alt="" class="emoji" width="24" height="24" role="presentation"> Percentage Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Percentage Calculator makes everyday <strong>percent calculations</strong> simple. Whether you need the <em>percentage of a number</em> or want to see the <em>percent change</em> between two amounts, this lightweight tool provides quick answers. Type in any value and the percent you want to find and get the result instantly. Because the script runs entirely in your browser, the tool works offline after the initial load. Use it to compute <strong>percentage increase</strong> or decrease without downloading apps. The interface is streamlined so you can focus on your task and get accurate numbers without distractions. With the Percentage Calculator, tricky math becomes effortless. Try the Percentage Calculator now!</p>
 <div>
