--- a/tools/pomodoro-timer/index.html
+++ b/tools/pomodoro-timer/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🍅</span> Pomodoro Timer</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/pomodoro-timer-tomato.png" alt="" class="emoji" width="24" height="24" role="presentation"> Pomodoro Timer</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Pomodoro Timer helps you maintain focus by breaking work into 25-minute bursts followed by short breaks. This <strong>online pomodoro timer</strong> is simple to use and runs entirely in your browser so you can keep your workflow distraction-free. Adjust the work and break lengths to suit your schedule, start the timer and let it count down. When time is up, you'll hear a beep and see a notice to take a break or begin the next round. After the first load, the app works offline, making it ideal for plane rides or spots with poor connectivity. By cycling between deep focus and rest, you'll stay productive without burning out. Try the Pomodoro Timer now!</p>
 <div>
