--- a/tools/stopwatch/index.html
+++ b/tools/stopwatch/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⏱️</span> Stopwatch</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/stopwatch.png" alt="" class="emoji" width="24" height="24" role="presentation"> Stopwatch</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Stopwatch lets you track elapsed time with precision. This <strong>online stopwatch</strong> starts and stops with a tap or spacebar press, then resets to zero on command. Because all timing occurs in your browser, it works even without a network connection after loading. Use it for workouts, study sessions or any activity that requires accurate tracking. The clear display and simple controls keep distractions minimal. Try the Stopwatch now!</p>
 <div>
