--- a/tools/temperature-converter/index.html
+++ b/tools/temperature-converter/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🌡️</span> Temperature Converter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/temperature-converter-thermometer.png" alt="" class="emoji" width="24" height="24" role="presentation"> Temperature Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Temperature Converter makes switching between <strong>Celsius and Fahrenheit</strong> effortless. This streamlined tool provides quick answers whether you're adjusting a recipe, checking the forecast, or learning in science class. Simply input a number and the converted value appears immediately. The interface is intentionally simple so you can focus on the result. Because it runs fully in your browser, the Temperature Converter works offline after the initial load. With no distractions or ads, you get accurate conversions whenever you need them. Try the Temperature Converter now!</p>
 <div>
