--- a/tools/time-zone-converter/index.html
+++ b/tools/time-zone-converter/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🕑</span> Time Zone Converter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/time-zone-converter-clock.png" alt="" class="emoji" width="24" height="24" role="presentation"> Time Zone Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Time Zone Converter lets you compare local time with any other region in seconds. This <strong>online time zone converter</strong> uses your browser's capabilities to adjust for daylight saving and display accurate times around the world. Pick your current zone, choose another city or region, and enter a date and time to see the conversion instantly. Because it works entirely on your device, you can access it even when offline. This makes scheduling meetings or travel calls easier no matter where you are. Try the Time Zone Converter now!</p>
 <label>From: <select id="tzFrom" aria-label="From time zone"></select></label>
