--- a/tools/tip-calculator/index.html
+++ b/tools/tip-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💵</span> Tip Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/tip-calculator-money.png" alt="" class="emoji" width="24" height="24" role="presentation"> Tip Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Tip Calculator makes <strong>restaurant tip</strong> math painless so you can focus on enjoying your meal. Whether you're dining out with friends or grabbing a quick bite, figuring out <em>service gratuity</em> and splitting the bill shouldn't slow you down. Enter your bill total, adjust the percentage slider, and see exactly how much each person owes. This handy tool is perfect for <strong>bill splitting</strong>, letting everyone cover their share without arguments. Because calculations happen on your device, it works even when you're offline. The minimalist interface loads fast and keeps distractions to a minimum. With the <strong>Tip Calculator</strong> you never have to wonder if you're overpaying or shortchanging your server. The script is lightweight yet accurate, so you get results instantly while keeping your data private. Try the Tip Calculator now!</p>
 <form id="tipForm" aria-label="Tip calculator form">
