--- a/tools/uuid-generator/index.html
+++ b/tools/uuid-generator/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🆔</span> UUID Generator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/uuid-generator-id.png" alt="" class="emoji" width="24" height="24" role="presentation"> UUID Generator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>UUID Generator</strong> creates version&nbsp;4 identifiers for coding, databases and other development tasks. Click the button to produce a new random ID. This <em>online UUID generator</em> works offline after first load. Try the UUID Generator now!</p>
 <button id="uuid-btn">Generate UUID</button>
