--- a/tools/word-counter/index.html
+++ b/tools/word-counter/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📝</span> Word Counter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/markdown-editor-pencil.png" alt="" class="emoji" width="24" height="24" role="presentation"> Word Counter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Word Counter</strong> helps you track the length of any text. Paste or type your content and see word and character counts update instantly. This <em>online word counter</em> is lightweight and works offline after first load. Try the Word Counter now!</p>
 <textarea id="wc-input" aria-label="Text input" rows="6" cols="40"></textarea>
