--- a/tools/base64-encoder/index.html
+++ b/tools/base64-encoder/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🔤</span> Base64 Encoder/Decoder</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/base64-encoder-keyboard.png" alt="" class="emoji" width="24" height="24" role="presentation"> Base64 Encoder/Decoder</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Base64 Encoder/Decoder</strong> lets you quickly convert between plain text and base64 strings. It&rsquo;s handy for developers who need to encode data for URLs, storage, or testing. Simply enter your text and hit encode, or paste a base64 string and decode it instantly. Everything runs client-side so your content stays private and the tool works offline after it&rsquo;s loaded once. Save time and get the conversions you need. Try the Base64 Encoder/Decoder now!</p>
 <div>
