--- a/tools/bmi-calculator/index.html
+++ b/tools/bmi-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">⚖️</span> BMI Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/bmi-calculator-scale.png" alt="" class="emoji" width="24" height="24" role="presentation"> BMI Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>BMI Calculator makes it easy to know your body mass index. This <strong>online BMI calculator</strong> uses the standard formula so you can determine whether you're underweight, normal, overweight, or obese. Just input your weight in kilograms and height in centimeters. The result appears instantly, providing guidance on your health status. Designed to work fast on any device, this lightweight tool loads quickly and keeps your information private. After your first visit, all files remain cached so you can check your BMI even without an internet connection. Keep track of changes as you adjust your diet or workout routine. Try the BMI Calculator now!</p>
 <div>
