--- a/tools/currency-converter/index.html
+++ b/tools/currency-converter/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💱</span> Currency Converter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/currency-converter-money.png" alt="" class="emoji" width="24" height="24" role="presentation"> Currency Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Currency Converter instantly shows exchange values for U.S. dollars, euros and British pounds. This <strong>offline currency tool</strong> uses sample rates stored in the page so you can see approximate conversions without internet access. Just select the source and target currencies, type an amount and tap convert. The results appear below for quick reference. For live data you would normally connect to an API, but this version demonstrates the process completely client-side. Try the Currency Converter now!</p>
 <div>
