--- a/tools/dice-roller/index.html
+++ b/tools/dice-roller/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎲</span> Dice Roller</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/dice-die.png" alt="" class="emoji" width="24" height="24" role="presentation"> Dice Roller</h1></div></header>
 <main id="main" data-aos="fade-in" class="container text-center animate__animated animate__fadeIn">
 <p><strong>Dice Roller</strong> gives you quick dice throws for board games or random decisions. Tap the roll button to spin the die with a smooth animation. The current value appears in large type below so it&rsquo;s easy to read at a glance. Because everything runs offline you can use it anywhere. Whether you&rsquo;re planning a game night or need a fast way to pick a number, this small utility is ready. Try the Dice Roller now!</p>
 <div class="my-4">
