--- a/tools/loan-calculator/index.html
+++ b/tools/loan-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🏦</span> Loan Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/loan-bank.png" alt="" class="emoji" width="24" height="24" role="presentation"> Loan Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Loan Calculator lets you see what your monthly payment would be for a mortgage or personal loan. This <strong>online loan calculator</strong> only needs the loan amount, annual interest rate, and number of years. With one click it reveals your monthly cost so you can budget confidently. Because everything runs in your browser, you can revisit the page anytime, even without a connection. Use it to plan for a car loan, student loan, or any installment plan. Understanding payments helps you compare offers and avoid surprises. Try the Loan Calculator now!</p>
 <label>Amount: <input type="number" id="loanAmount" aria-label="Amount"></label>
