--- a/tools/random-number-generator/index.html
+++ b/tools/random-number-generator/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎲</span> Random Number Generator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/dice-die.png" alt="" class="emoji" width="24" height="24" role="presentation"> Random Number Generator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Random Number Generator</strong> creates numbers for games or decision-making. Enter a minimum and maximum value, then click generate. This <em>online RNG</em> works offline after first load. Try the Random Number Generator now!</p>
 <label>Min <input type="number" id="rng-min" value="1"></label>
