--- a/tools/scientific-calculator/index.html
+++ b/tools/scientific-calculator/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📐</span> Scientific Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/scientific-calculator-triangle.png" alt="" class="emoji" width="24" height="24" role="presentation"> Scientific Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Scientific Calculator offers <strong>advanced functions</strong> like sine, cosine, tangent and exponentiation. This <em>online scientific calculator</em> is ideal for students and professionals needing more than basic arithmetic. It works smoothly on desktop and mobile, caching assets for offline availability. Try the Scientific Calculator now!</p>
 <div id="sci-calc">
