--- a/tools/simple-interest-calculator/index.html
+++ b/tools/simple-interest-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">💰</span> Simple Interest Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/simple-interest-calculator-moneybag.png" alt="" class="emoji" width="24" height="24" role="presentation"> Simple Interest Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Simple Interest Calculator helps you estimate interest charges on loans or deposits using the <em>simple interest</em> method. This <strong>online calculator</strong> asks for the principal amount, annual rate and time period in years. After you click calculate, it displays the interest earned or owed along with the final total. Because everything happens client-side, the tool remains functional offline after the first visit. Whether you're checking a small loan or planning savings growth, this calculator provides a quick answer with minimal fuss. Keep your finances on track and know what to expect before signing an agreement. Try the Simple Interest Calculator now!</p>
 <label>Principal: <input type="number" id="siPrincipal" aria-label="Principal"></label>
