--- a/tools/triangle-area-calculator/index.html
+++ b/tools/triangle-area-calculator/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🔺</span> Triangle Area Calculator</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/triangle-area-calculator-triangle.png" alt="" class="emoji" width="24" height="24" role="presentation"> Triangle Area Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>Triangle Area Calculator gives you a quick way to measure any three-sided shape. This <strong>triangle area calculator online</strong> takes the base and height, then instantly provides the area. Builders and students alike use it to check homework, verify measurements, or plan projects. The interface is minimal so you can concentrate on the numbers. Because it runs in your browser, the calculator loads fast and still works when you have no internet connection. It’s perfect for classrooms, job sites, or quick geometry checks on the go. The tool is designed to be intuitive on phones and desktops, with large form fields and clear buttons. Give it a try whenever you need to work out surface area without a bulky calculator or textbook. Try the Triangle Area Calculator now!</p>
 <label>Base: <input type="number" id="base" aria-label="Base"></label>
