--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
-<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🔄</span> Unit Converter</h1></div></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/unit-converter-cycle.png" alt="" class="emoji" width="24" height="24" role="presentation"> Unit Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
 <p>The <strong>Unit Converter</strong> provides a simple way to switch between different measurement systems. Whether you need to turn meters into feet or kilograms into pounds, this tool makes it straightforward. Select the type of conversion, enter your value, and see the result appear instantly. The interface is uncluttered so you can focus on the numbers that matter. This <em>online unit converter</em> works without signups and caches its scripts on your first visit, letting you continue even when you&rsquo;re offline. For more specialized calculators, check out our <a href="../basic-calculator/">Basic Calculator</a>, <a href="../scientific-calculator/">Scientific Calculator</a>, and <a href="../graphing-calculator/">Graphing Calculator</a>. Try the Unit Converter now!</p>
 <label for="uc-type">Type</label>
